[gd_scene load_steps=4 format=3 uid="uid://cea8fxagp7o5l"]

[ext_resource type="Script" path="res://modules/entity/entity.gd" id="1_2mpj3"]
[ext_resource type="Script" path="res://modules/entity/obj.gd" id="2_foxfk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qg2t8"]

[node name="Entity" type="Node2D"]
script = ExtResource("1_2mpj3")

[node name="Builder" type="Window" parent="."]
title = "Entity"
initial_position = 1
size = Vector2i(300, 150)
visible = false
unresizable = true

[node name="Path" type="TextEdit" parent="Builder"]
offset_right = 192.0
offset_bottom = 30.0
placeholder_text = "Image Path"

[node name="Browse" type="Button" parent="Builder"]
offset_left = 198.0
offset_top = -1.0
offset_right = 264.0
offset_bottom = 30.0
text = "Browse"

[node name="BrowsePath" type="FileDialog" parent="Builder"]
title = "Open a File"
position = Vector2i(50, 50)
size = Vector2i(600, 600)
ok_button_text = "Open"
file_mode = 0
access = 1

[node name="Scale" type="HSlider" parent="Builder"]
offset_left = 54.0
offset_top = 64.0
offset_right = 266.0
offset_bottom = 96.0
tooltip_text = "The scale of the texture"
max_value = 3.0
step = 0.05
value = 1.0

[node name="ScaleLabel" type="Label" parent="Builder"]
offset_top = 67.0
offset_right = 40.0
offset_bottom = 93.0
text = "Scale"

[node name="FlipX" type="CheckButton" parent="Builder"]
offset_left = -7.0
offset_top = 91.0
offset_right = 82.0
offset_bottom = 122.0
tooltip_text = "Whether to flip the texture horizontally (used for motion)"
text = "Flip x"

[node name="Move" type="CheckButton" parent="Builder"]
offset_left = 184.0
offset_top = 93.0
offset_right = 275.0
offset_bottom = 124.0
tooltip_text = "Whether the entity is moving"
text = "Move"

[node name="Obj" type="CharacterBody2D" parent="."]
position = Vector2(500, 500)
script = ExtResource("2_foxfk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obj"]
shape = SubResource("RectangleShape2D_qg2t8")

[node name="Sprite2D" type="Sprite2D" parent="Obj"]

[connection signal="close_requested" from="Builder" to="." method="_on_builder_close_requested"]
[connection signal="pressed" from="Builder/Browse" to="." method="_on_browse_pressed"]
[connection signal="file_selected" from="Builder/BrowsePath" to="." method="_on_browse_path_file_selected"]
[connection signal="drag_ended" from="Builder/Scale" to="." method="_on_scale_drag_ended"]
[connection signal="drag_started" from="Builder/Scale" to="." method="_on_scale_drag_started"]
[connection signal="toggled" from="Builder/FlipX" to="." method="_on_flip_x_toggled"]
[connection signal="toggled" from="Builder/Move" to="." method="_on_move_toggled"]
